--- a/Sondix/CodeJavaApp/src/main/resources/templates/users.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/users.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Liste des utilisateurs</title>
+<title>List Users</title>
 <link rel="stylesheet" type="text/css"
 	href="/webjars/bootstrap/css/bootstrap.min.css" />
 <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
@@ -36,7 +36,6 @@
 						<th>Categorie socio-professionnelle</th>
 						<th>Date de naissance</th>
 						<th>Sexe</th>
-						<th>Role</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -50,7 +49,6 @@
 						<td th:text="${user.socio}"></td>
 						<td th:text="${user.birth}"></td>
 						<td th:text="${user.sexe}"></td>
-						<td th:text="${user.role}"></td>
 					</tr>
 				</tbody>
 			</table>
