Update version perso

--- a/CodeJavaApp/src/main/resources/templates/register_success.html
+++ b/CodeJavaApp/src/main/resources/templates/register_success.html
@@ -16,8 +16,7 @@
 	<h1>Vous vous êtes inscrit avec succès.</h1>
 	<div>
 		<br>
-		<button onclick="window.location.href = '/';">Cliquez ici pour vous connecter</button>
-		<button onclick="window.location.href = '/login';">TEST LOGINr</button>
+		<button onclick="window.location.href = '/login';">Cliquez ici pour vous connecter</button>
 	</div>
 	
 </body>
