--- a/CodeJavaApp/src/main/resources/templates/signup_form.html
+++ b/CodeJavaApp/src/main/resources/templates/signup_form.html
@@ -93,6 +93,7 @@
 
 				<div>
 					<button type="submit" class="btn btn-primary">S'inscrire</button>
+					
 				</div>
 			
 			</div>
@@ -101,7 +102,8 @@
 	</div>
 	<br><br>
 	
-	<button> <a th:href="@{/}">Retour au menu principal </a></button>
+	<button onclick="window.location.href = '/';"> Retour au menu principal </button>
+
 	<footer>
         <p>©2022 - v1 Page d'inscription (fonctionnel)- Groupe BNIK Bouchra - MENGUELTI Hacène - PISANO Vincent </p>
     </footer>
