--- a/Sondix/CodeJavaApp/src/main/resources/templates/index.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
 				<div class="panneau-mobile mobile-gauche">
 					<h2>Vous voilà de retour!</h2>
 					<p>Pour reprendre vos QCM favoris, connectez-vous à l'aide de vos identifiants</p>
-					<button class="fantome" id="boutonTransiConnexion">Connnexion</button>
+					<button class="fantome" id="boutonTransiConnexion">Connexion</button>
 				</div>
 				<div class="panneau-mobile mobile-droite">
 					<h2>Bienvenue !</h2>
