--- a/Sondix/CodeJavaApp/src/main/resources/templates/creation_qcm.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/creation_qcm.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 <div class="container text-center">
+
+		<div>
+			<form th:action="@{/retourEmploye}" method="post">
+				<input type="submit" value="Retour" />
+			</form>
+		</div>
 		<div>
 			<h1>Création du QCM</h1>
 		</div>
@@ -43,16 +49,16 @@
 				</div>
 				
 				<div class="form-group row">
-					<label class="col-4 col-form-label">Reponses 1 :</label>
+					<label class="col-4 col-form-label">Réponses 1 :</label>
 					<div class="col-8">
 						<input type="text" th:field="*{reponses1[0]}" class="form-control"
 							minlength="3" required maxlength="50" />
 							<input type="text" th:field="*{reponses1[1]}" class="form-control"
 							minlength="3" required maxlength="50" />
 							<input type="text" th:field="*{reponses1[2]}" class="form-control"
-							minlength="3" required maxlength="50" />
+							minlength="3"  maxlength="50" />
 							<input type="text" th:field="*{reponses1[3]}" class="form-control"
-							minlength="3" required maxlength="50" />
+							minlength="3"  maxlength="50" />
 					</div>
 				</div>
 
