--- a/Sondix/CodeJavaApp/src/main/resources/templates/detailQcm.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/detailQcm.html
@@ -11,47 +11,54 @@
 	src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 	<div class="container text-center">
+
 		<div>
-			<form th:action="@{/logout}" method="post">
-
-				<input type="submit" value="Déconnexion" />
-
+			<form th:action="@{/retourResponsable}" method="post">
+				<input type="submit" value="Retour" />
 			</form>
 		</div>
 		<div>
-			<h3>Bienvenue sur la page de l'internaute</h3>
-			<span sec:authentication="principal.IdUser">IdUser</span> <span
-				sec:authentication="principal.FullName">FullName</span> <span
-				sec:authentication="principal.Username">Username</span>
-		</div>
-		<div>
-			<h3>Liste des QCM disponible</h3>
-
+			<h1> Sondage </h1>
+			<h1 th:text="${QCM.titre}"></h1>
 		</div>
 
-		<div>
+		<div th:each="question: ${QCM.questions}">
+			<h3>Question </h3>
+			<h3 th:text="${questionStat.count}"></h3>
+				<h3 th:text="${question}"></h3>
+			<div th:each="reponse :  ${QCM.reponses1}">
+				<label th:text="${reponse}"></label>
+			</div>
+		</div>
+
+		<!--  <div>
 			<table class="table table-striped table-bordered">
 				<thead class="thead-dark">
 					<tr>
-
+						<th>ID QCM</th>
 						<th>Titre</th>
 						<th>Catégorie</th>
-						<th>Action</th>
+						<th>Questions</th>
+						<th>Reponses</th>
+
+
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="qcm: ${listQcm}">
-						<td th:text="${qcm.titre}"></td>
-						<td th:text="${qcm.categorie}"></td>
-						<td><a th:href="@{/faireQcm/{titre}(titre=${qcm.titre})}">Faire</a>
-						</td>
+					<tr th:each="reponse: ${QCM.reponses1}">
+						<td th:text="${QCM.idQCM}"></td>
+						<td th:text="${QCM.titre}"></td>
+						<td th:text="${QCM.categorie}"></td>
+						<td th:text="${QCM.questions}"></td>
+						<td th:text="${reponse}"></td>
+
+
 					</tr>
 				</tbody>
 			</table>
 		</div>
+		-->
 	</div>
-
 </body>
 </html>
