--- a/Sondix/CodeJavaApp/src/main/resources/templates/register_failure.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/register_failure.html
@@ -15,7 +15,7 @@
 	<h1>Le compte existe déjà pour ce mail.</h1>
 	<div>
 		<br>
-		<button onclick="window.location.href = '/';">Cliquez ici pour vous connecter</button>
+		<button onclick="window.location.href = '/login';">Cliquez ici pour vous connecter</button>
 	</div>
 	
 </body>
