--- a/Sondix/CodeJavaApp/src/main/resources/templates/responsable.html
+++ b/Sondix/CodeJavaApp/src/main/resources/templates/responsable.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <title>Accueil Sondix</title>
@@ -11,9 +12,65 @@
 </head>
 <body>
 	<div class="container text-center">
-		<h1>Bienvenue sur la page du responsable</h1>
+		<div>
+			<form th:action="@{/logout}" method="post">
 
+				<input type="submit" value="Déconnexion" />
+
+			</form>
+		</div>
+		<div>
+			<h3>Bienvenue sur la page du responsable</h3>
+			<span sec:authentication="principal.IdUser">IdUser</span> <span
+				sec:authentication="principal.FullName">FullName</span> <span
+				sec:authentication="principal.Username">Username</span>
+		</div>
+		<div>
+			<h3>Liste des demandes de mise en ligne des QCM</h3>
+
+		</div>
+
+		<div>
+			<table class="table table-striped table-bordered">
+				<thead class="thead-dark">
+					<tr>
+					
+						<th>Titre</th>
+						<th>Catégorie</th>
+						<th>Commentaire</th>
+						<th>Statut</th>
+						<th>Détail</th>
+						<th>Décision</th>
+
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="qcm: ${listQcm}">
+					
+						<td th:text="${qcm.titre}"></td>
+						<td th:text="${qcm.categorie}"></td>
+						<td th:text="${qcm.commentaire}"></td>
+						<td th:text="${qcm.statut}"></td>
+						<td>
+							
+							<a th:href="@{/detailQcm/{titre}(titre=${qcm.titre})}">Voir</a>
+						</td>
+						
+						<td>
+							<form th:action="@{/decision}" method="post">
+								<input type="text" name="titre" th:value="${qcm.titre}" hidden>
+								<input type="text" name="commentaire" placeholder="Commentaire"
+									minlength="2" required maxlength="50">
+									 <input th:disabled="${qcm.statut} ne 'Demande de mise en ligne'" type="submit" name="action"	value="Validé" th:value="Validé"> 
+									 <input th:disabled="${qcm.statut} ne 'Demande de mise en ligne'" type="submit"	name="action" value="Refusé" th:value="Refusé">
+
+							</form>
+						</td>
+
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
-
 </body>
 </html>
